k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "goserver"
  labels:
    app: "goserver"
spec:
  selector:
    matchLabels:
      app: "goserver"
  replicas: 1
  template:
      metadata:
        labels: 
          app: "goserver"
      spec:
        containers:
        - name: "goserver"
          image: nilsonrsvieira/hello-go:v4
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
