k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "goserver"
  labels: 
    app: "goserver"
spec:
  containers:
  - name: "goserver"
    image: nilsonrsvieira/hello-go
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
