k8s/service-loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: 
    LoadBalancer
  ports:
  - name: goserver-service
    port: 8080 
    targetPort: 8080 
    protocol: TCP


# LoadBalancer cria um IP para ser acessado de fora do Cluster
# Usado em Provedores de Nuvem
