k8s/service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: 
    NodePort
  ports:
  - name: goserver-service
    port: 8080 # Porta do Service
    targetPort: 8080 # Porta do Container
    protocol: TCP
    nodePort: 30001

# É Forma mais arcaica/antiga de uso 
# NodePort deve ser maior que 30000 e menor que 32767 --> Exemplo: 30001
