k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: 
    ClusterIP
  ports:
  - name: goserver-service
    port: 8080 # Porta do Service
    targetPort: 8080 # Porta do Container
    protocol: TCP
